# dac_play

./: .gitignore  .gitmodules  BUILD_OSX.md  BUILD_UBUNTU.md  BUILD_WIN32.md  CMakeLists.txt  README.md  build_qtwallet_x64.bat  build_qtwallet_x86.bat  setenv.bat  setenv_x64.bat
HelperScripts/: jenkins_build32.bat  jenkins_build_linux.sh
libraries/: CMakeLists.txt
libraries/api/: CMakeLists.txt  blockchain_api.json  debug_api.json  game_api.json  light_api.json  types.json  wallet_api.json
libraries/blockchain/: CMakeLists.txt  account_operations.cpp  account_record.cpp  ad_record.cpp  asset_operations.cpp  asset_record.cpp  balance_operations.cpp  balance_record.cpp  chain_database.cpp  chain_interface.cpp  dice_operations.cpp  dice_record.cpp  game_operations.cpp  game_record.cpp  games.cpp  genesis_pdv.json  genesis_xts.json  market_engine.cpp  market_operations.cpp  market_records.cpp  meta_game_operations.cpp  note_record.cpp  operation_reward_record.cpp  operations.cpp  packet_record.cpp  (+3 more)
libraries/game/: CMakeLists.txt  client.cpp  dice.js  dice_game.cpp  dice_rule.cpp  dice_rule.js  game_config.cpp  game_factory.cpp  game_operations.cpp  games.cpp  http_downloader.cpp  rule_factory.cpp  v8_api.cpp  v8_game.cpp  v8_helper.cpp
libraries/game/include/bts/game/: client.hpp  dice_game.hpp  dice_rule.hpp  game_config.hpp  game_factory.hpp  game_operations.hpp  game_records.hpp  games.hpp  http_downloader.hpp  rule_factory.hpp  rule_record.hpp  v8_api.hpp  v8_game.hpp  v8_helper.hpp
tests/: CMakeLists.txt  util_cnr_test.cpp  v8_test.cpp  wallet_tests.cpp
(+121 files in other folders)
